update jvm-optimize